Run and fix bug on mobile (5)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,7 @@ html {
 #slider {
     margin-top: 46px;
     padding-top: 50%;
-    background: url(/assets/img/slider/la.jpg) top center / cover no-repeat;
+    background: url('/assets/img/slider/la.jpg') top center / cover no-repeat;
     position: relative;
 }
 
